# proofpay

./: .gitignore  Anchor.toml  CLAUDE.md  LICENSE  PROOFPAY_BIZ.md  PROOFPAY_BUGS.md  PROOFPAY_CHECKLIST.md  PROOFPAY_CONTEXT.md  PROOFPAY_POST_HACKATHON.md  PROOFPAY_TECH.md  PROOFPAY_TEMPLATES.md  README.md  a1.json  a2.json  analyze_req.json  grid_q.graphql  grid_req.json  package-lock.json  package.json  q1.json  q2.json  submission.html  vercel.json
app/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1776166451758-ee834cd2495ad.mjs
app/src/: App.tsx  index.css  main.tsx
app/src/components/: CreateEscrow.tsx  DisputePanel.tsx  EscrowMonitor.tsx  TerminalHeader.tsx
app/src/idl/: proofpay.json
app/src/lib/: LanguageContext.tsx
app/src/pages/: Index.tsx
programs/proofpay/: Cargo.toml
programs/proofpay/src/: lib.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
server/: .env.example  Dockerfile  package-lock.json  package.json  preload.cjs  render.yaml  tsconfig.json
server/src/: index.ts
supabase/functions/dispute-oracle/: index.ts
supabase/migrations/: 0001_proofpay_schema.sql  0002_oracle_decisions.sql
tests/: proofpay.ts
