[package]
name = "proofpay"
version = "0.1.0"
description = "ProofPay — Solana-native B2B escrow with x402 payment routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofpay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
